# aoc

./: .gitignore  CMakeLists.txt  README.md
src/2023/01/: day1.cpp
src/2023/02/: day2.cpp
src/common/: filehandler.cpp  filehandler.h  stringparser.cpp  stringparser.h
